# ubuntu-touch-qt3d-cylinder

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  cylinder.apparmor  cylinder.desktop  cylinder.pro  main.cpp  manifest.json
cmake/: Click.cmake
src/: CMakeLists.txt  cylinderview.cpp  cylinderview.h  main.cpp
